# Proj_Scale

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  client.py  graders.py  inference.py  inference_config.py  inference_prompts.py  inference_runner.py  inference_strategies.py  models.py  openenv.yaml  preval_script.sh  pyproject.toml  requirements.txt  sample_inference_script.py  scenario_config.json  tasks.py
docs/: guide.md
scripts/: preval_script.sh
server/: Dockerfile  __init__.py  __main__.py  app.py  requirements.txt  support_ops_environment.py
tests/: conftest.py  test_api.py  test_api_lifecycle.py  test_config_loading.py  test_environment.py  test_graders.py  test_inference_output.py  test_inference_strategies.py
