[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Proj_Scale"
version = "1.0.0"
description = "Support operations triage environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.9",
]

[project.scripts]
server = "Proj_Scale.server.app:main"

[tool.uv]
package = false

[tool.setuptools]
include-package-data = true
packages = ["Proj_Scale", "Proj_Scale.server"]
package-dir = { "Proj_Scale" = ".", "Proj_Scale.server" = "server" }
